--- a/src/_locales/cs/messages.json
+++ b/src/_locales/cs/messages.json
@@ -599,6 +599,14 @@
     "message": "Otevřít vlastní URL",
     "description": "Open custom URL"
   },
+  "commandLabelOpenCustomURLInNewWindow": {
+    "message": "Otevřít vlastní URL v novém okně",
+    "description": "Open custom URL in new window"
+  },
+  "commandLabelOpenCustomURLInNewPrivateWindow": {
+    "message": "Otevřít vlastní URL v novém anonymním okně",
+    "description": "Open custom URL in new private window"
+  },
   "commandLabelPasteClipboard": {
     "message": "Vložit ze schránky",
     "description": "Paste clipboard"
@@ -938,6 +946,14 @@
   "commandDescriptionOpenCustomURL": {
     "message": "Otevře zadanou URL v aktuálním panelu.",
     "description": "Opens the specified URL in the current tab."
+  },
+  "commandDescriptionOpenCustomURLInNewWindow": {
+    "message": "Otevře zadanou URL v novém okně.",
+    "description": "Opens the specified URL in a new window."
+  },
+  "commandDescriptionOpenCustomURLInNewPrivateWindow": {
+    "message": "Otevře zadanou URL v novém anonymním okně.",
+    "description": "Opens the specified URL in a new private window."
   },
   "commandDescriptionPasteClipboard": {
     "message": "Vloží aktuální text ve schránce na pozici kurzoru vstupního pole, na kterém začalo gesto.",
