--- a/src/_locales/it_IT/messages.json
+++ b/src/_locales/it_IT/messages.json
@@ -599,6 +599,14 @@
     "message": "Apri URL personalizzato",
     "description": "Open custom URL"
   },
+  "commandLabelOpenCustomURLInNewWindow": {
+    "message": "Apri URL personalizzato in una nuova finestra",
+    "description": "Open custom URL in new window"
+  },
+  "commandLabelOpenCustomURLInNewPrivateWindow": {
+    "message": "Apri URL personalizzato in una nuova finestra privata",
+    "description": "Open custom URL in new private window"
+  },
   "commandLabelPasteClipboard": {
     "message": "Incolla appunti",
     "description": "Paste clipboard"
@@ -938,6 +946,14 @@
   "commandDescriptionOpenCustomURL": {
     "message": "Apre l'URL specificato nella scheda corrente.",
     "description": "Opens the specified URL in the current tab."
+  },
+  "commandDescriptionOpenCustomURLInNewWindow": {
+    "message": "Apre l'URL specificato in una nuova finestra.",
+    "description": "Opens the specified URL in a new window."
+  },
+  "commandDescriptionOpenCustomURLInNewPrivateWindow": {
+    "message": "Apre l'URL specificato in una nuova finestra privata.",
+    "description": "Opens the specified URL in a new private window."
   },
   "commandDescriptionPasteClipboard": {
     "message": "Inserisce il testo degli appunti corrente nella posizione del cursore dell'elemento di input sul quale è iniziato il gesto.",
