--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -599,6 +599,14 @@
     "message": "Ouvrir une URL personnalisée",
     "description": "Open custom URL"
   },
+  "commandLabelOpenCustomURLInNewWindow": {
+    "message": "Ouvrir une URL personnalisée dans une nouvelle fenêtre",
+    "description": "Open custom URL in new window"
+  },
+  "commandLabelOpenCustomURLInNewPrivateWindow": {
+    "message": "Ouvrir une URL personnalisée dans une nouvelle fenêtre privée",
+    "description": "Open custom URL in new private window"
+  },
   "commandLabelPasteClipboard": {
     "message": "Coller le presse-papiers",
     "description": "Paste clipboard"
@@ -938,6 +946,14 @@
   "commandDescriptionOpenCustomURL": {
     "message": "Ouvre l'URL spécifiée dans l'onglet courant.",
     "description": "Opens the specified URL in the current tab."
+  },
+  "commandDescriptionOpenCustomURLInNewWindow": {
+    "message": "Ouvre l'URL spécifiée dans une nouvelle fenêtre.",
+    "description": "Opens the specified URL in a new window."
+  },
+  "commandDescriptionOpenCustomURLInNewPrivateWindow": {
+    "message": "Ouvre l'URL spécifiée dans une nouvelle fenêtre privée.",
+    "description": "Opens the specified URL in a new private window."
   },
   "commandDescriptionPasteClipboard": {
     "message": "Inserts the current clipboard text at the caret position of the input element on which the gesture started.",
