Added a full screen functionality

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -493,6 +493,10 @@
     "message": "New private window",
     "description": "New private window"
   },
+  "commandLabelFullscreen": {
+    "message": "Full screen",
+    "description": "Full screen"
+  },
   "commandLabelMoveTabToStart": {
     "message": "Move tab to start",
     "description": "Move tab to start"
@@ -841,6 +845,10 @@
   "commandDescriptionNewPrivateWindow": {
     "message": "Opens a new empty private window.",
     "description": "Opens a new empty private window."
+  },
+  "commandDescriptionFullscreen": {
+    "message": "Sets the window to its full size.",
+    "description": "Sets the window to its full size."
   },
   "commandDescriptionMoveTabToStart": {
     "message": "Moves the current tab to the start of the tab strip.",
