Move data management actions to "extras" page Historical moment. I hope you're all proud of me, that these actions finally leave the "about" page.

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -285,15 +285,23 @@
     "description": "The minimal amount the mouse wheel must be scrolled until the gesture is triggered."
   },
 
-  "aboutBackup": {
+  "dataManagementLabel": {
+    "message": "Manage user data",
+    "description": "Manage user data"
+  },
+  "dataManagementDescription": {
+    "message": "These actions affect any mouse gestures and settings.",
+    "description": "These actions affect any mouse gestures and settings."
+  },
+  "dataBackup": {
     "message": "Backup",
     "description": "Backup"
   },
-  "aboutRestore": {
+  "dataRestore": {
     "message": "Restore",
     "description": "Restore"
   },
-  "aboutReset": {
+  "dataReset": {
     "message": "Reset",
     "description": "Reset"
   },
